--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -51,7 +51,24 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/lisaprofile.jpg
+    - assets/images/kanye.jpg
+    - assets/images/ariana.jpg
+    - assets/images/emmastone.jpg
+    - assets/images/green.png
+    - assets/images/gardening.png
+    - assets/images/solar.png
+    - assets/images/wildfire.png
+    - assets/images/thrifting.png
+    - assets/images/hp.png
+    - assets/images/lyft.png
+    - assets/images/spotify.png
+    - assets/images/dunkin.png
+    - assets/images/doordash.png
+    - assets/images/patagonia.png
+
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
